aligned items correctly

--- a/blogstyle.css
+++ b/blogstyle.css
@@ -69,15 +69,21 @@ h1  {
 main {
     display: flex;
     flex-wrap: wrap;
-    width: 345px;
-    background: #f5f5f5;
-    margin: 1rem;
-      
+    justify-content: center; 
+    background: #f5f5f5;   
 }
 
+#robert {
+    font-family: roboto, sans-serif;
+    color: #162d46;  
+}
+
+
+
+
 #carol {
-    display: flex;
-    border-radius: 2rem 0rem  
+    width: 250px;
+    border-radius: 2rem 0rem 
 }
 
 #carol-color{
@@ -86,7 +92,8 @@ main {
 }
 
 blockquote{
-    display: flex;
+    width: 350px;
+    height: 200px; 
     flex-wrap: wrap;
     display:block; 
     background: #ffff;
@@ -102,10 +109,13 @@ blockquote{
     box-shadow: 2px 2px 15px #ccc;
 }
 
+figcaption { 
+    font-family: roboto, sans-serif; 
+    color: #162d46;
+ } 
+ 
 
-
-
-
+ 
 
    
 
